# dotfiles

./: .bash_completion  .bash_profile  .bashrc  .ctags  .gdbinit  .gitignore  .gitmodules  .globalrc  .minttyrc  .screenrc  .tmux.conf  .zshrc  Dockerfile.arch  Dockerfile.lldb  Makefile  README.adoc  README.md  binja_script.py  bootstrap.sh  brews.txt  gdbinit  gdbinit.py  ida_script.py  kernel-tests.sh  logging.sh  pyproject.toml  setup-dev.sh  setup.sh  subtrees.txt  tests.sh  util.sh
.bash_completion.d/: ag.bashcomp.sh
.config/: mc.keymap
.github/: codecov.yml  pull_request_template.md
.github/workflows/: docker.yml  docs-release.yml  lock.yml  releases.yml  tests.yml  trigger-homebrew-release.yml
ag/: alias.sh  requirements.sh
aria2/: requirements.sh
aria2/.aria2/: aria2.conf.symlink
autojump/: env.sh  init.sh
base-16/: env.sh  path.sh  requirements.sh  top_sh.sh
bash/: .bash_profile.symlink  .bashrc.symlink  prompt.bash  requirements.sh
boost/: bootstrap.sh  env.sh  env.sh.bak  requirements.sh
calibre/: README.adoc  completion.bash  requirements.sh
calibre/zsh-completion.disabled/: _calibre
cargo/: bootstrap.sh  requirements.sh
colorschemes/: dracula.sh  multitude-dark.sh  multitude-light.sh
ctags/: .ctags.symlink  requirements.sh
data-science-at-the-command-line/: bootstrap.sh
debian/: .gitignore  rules
devtoolset/: bootstrap.sh  requirements.sh
doc/: todo.mdwn
doc/todo/: Add_gbp_support.mdwn  Make_mr_status_or_git__95__status_for_that_matter_have_minimal_set_by_default_through_.mrconfig.mdwn
docs/: .nav.yml
docs/commands/: index.md
docs/configuration/: index.md
docs/contributing/: .nav.yml  adding-a-parameter.md  index.md  making-a-gif.md  writing-tests.md
docs/functions/: index.md
docs/js/: prompt-highlighter.js
docs/stylesheets/: extra.css  mkdocstrings.css
docs/tutorials/: gdb-lldb-commands.md  gdb-tui.md  pycharm-debugging.md  splitting-the-context.md
dynamic-colors/: alias.sh  bin  cmd.sh  completion.zsh  env.sh  env.zsh  highlight.zsh  init.sh  requirements.sh  top_sh.sh
fasd/: .fasdrc.symlink  aliases.sh  bindkey.zsh  init.sh  requirements.sh
fpp/: env.sh  requirements.sh
fzf/: bootstrap.sh  requirements.sh
gdb/: .gdbinit.local.symlink  .gdbinit.symlink  gdbinit.old  requirements.sh
gdb/scripts/: colour_filter.py  gdbDisplayLockedThreads.py  offsets.py
gem/: .gemrc.symlink  .gemrc.symlink-inet  bootstrap.sh  path.sh  requirements.sh
gemini/: requirements.sh
gemini/.gemini/: GEMINI.md.symlink
git/: .gitconfig.local.symlink  .gitconfig.symlink  .gitignore  alias.bash  bootstrap.sh  requirements.sh
go/: bootstrap.sh  env.sh  path.sh  requirements.sh
gtags/: env.sh  requirements.sh
hammerspoon/: requirements.sh
haskell/: bootstrap.sh  requirements.sh
homebrew/: bootstrap.sh  env.sh  requirements.sh
java/: bootstrap.sh  requirements.sh
jing/: requirements.sh
jrnl/: .jrnl_config.symlink  alias.sh  requirements.sh
karabiner/: README.md  SpaceFn.yaml  SpaceFn45.py  SpaceFn45.yaml  generate_cfg.py  requirements.sh
keeagent/: keeagent.sh  requirements.sh
lib/: stow  vis
lib.sh/: cache-mr-status.sh
libexec/: svn.bash  util.bash  windbg.bash
lilypond/: requirements.sh
mac/: Brewfile  alias.sh  brew-cask.txt  brew.txt
macos/: Brewfile  README.md  alias.sh  env.sh  requirements.sh  util.sh
markdownlint/: requirements.sh
mc/: env.sh  requirements.sh
media/: README.md
mintty/: .minttyrc.symlink  requirements.sh
my-dockers/: README.md  alias-asciidoctor.sh  bootstrap.sh  requirements.sh
my-dockers/scripts/: asciidoctor-epub3  asciidoctor-pdf  dvim  ebook-convert  ffmpeg  gimp
myrepos/: requirements.sh
myrepos/src/: Makefile
nix/: devshell.nix  portable.nix  pwndbg.nix
nix/bundle/: nfpm-lldb.yaml  pkg.nix
nix/overlay/: gdb-fix-cross-python.patch  gdb.nix
npm/: bootstrap.sh  path.sh  requirements.sh
nvm/: completion.bash  env.sh  requirements.sh
peco/: cmd_git.sh  cmd_process.sh  cmd_tmux.sh  requirements.sh
peco/.percol.d/: rc.py.symlink
percol/: binding.zsh  cmd.sh  cmd_git.sh  cmd_process.sh  cmd_tmux.sh  requirements.sh
percol/.percol.d/: rc.py.symlink
pet/: README  bootstrap.sh  completion.zsh  requirements.sh  util.bash  util.zsh
pip/: bootstrap.sh  env.sh  path.sh  requirements.sh
pip/.pip/: pip.conf.symlink  pip.conf.symlink-inet
pipenv/: bootstrap.sh  requirements.sh
profiling/: profile.sh
pwndbg/: arguments.py  auxv.py  decorators.py  enhance.py  ghidra.py  glibc.py  log.py  radare2.py  ui.py
pwndbginit/: gdbinit.py  gdbpatches.py  lldbinit.py  pwndbg_gdb.py  pwndbg_lldb.py
pyenv/: bootstrap.sh  data_requirements.txt  env.sh  requirements.sh
python/: bootstrap.sh
rvm/: path.sh  requirements.sh
screen/: .screenrc.symlink  requirements.sh
scripts/: nix-build.sh  nix-update-flake-lock.sh
solarized/: completion.bash  env.sh  highlight.zsh  init.sh  requirements.sh
svn/: cmd.sh  completion_remote_paths.bash  requirements.sh
system/: .dir_colors.symlink  .inputrc.symlink  .mime.types.symlink  alias.sh  bootstrap.sh  config.bash  config.sh  dircolors.sh  env.sh  libexec.sh  path.sh
taskwarrior/: .gitignore  .taskrc.local.symlink.example  .taskrc.symlink  .taskrc.symlink.example  alias.sh  base16-dark.theme  bootstrap.sh  completion.bash  eisenhower.conf  env.zsh  pomodoro.conf  requirements.sh  solarized-dark.theme
tests/: tests.py
timewarrior/: alias.sh  cmd.sh  requirements.sh
tmux/: .tmux-status.conf.symlink  .tmux-theme-base16.conf.symlink  .tmux-theme-zenburn.conf.symlink  .tmux.conf.symlink  cmd.sh  functions.sh  requirements.sh
todo-txt/: alias.sh  requirements.sh
truenas/: requirements.sh
util/: alias.sh  alias.zsh  bootstrap.sh  char-test  daily.sh  encfs.sh  numconv.sh  time.sh  util.sh
virtualenvwrapper/: env.sh  init.sh  requirements.sh
volta/: env.sh  path.sh  requirements.sh
windbg/: heap.sh
work/: util.sh
wsl/: README.md  env.sh  requirements.sh  wsl-ssh-agent-forwarder.sh
zsh/: .zshrc.symlink  alias.zsh  bindkey.zsh  config.zsh  requirements.sh  zshrc.zplugin
(+695 files in other folders)
